--- a/src/assets/sass/main.scss
+++ b/src/assets/sass/main.scss
@@ -2005,3 +2005,15 @@
 			}
 		}
 	}
+	
+	.slick-dots {
+		bottom: 10px !important;
+		li {
+			button {
+				box-shadow: inset 0 0 0 2px !important;
+				&:before {
+					font-size: 15px !important;
+				}
+			}
+		}
+	}
