--- a/src/assets/sass/libs/_vars.scss
+++ b/src/assets/sass/libs/_vars.scss
@@ -85,11 +85,11 @@
 		),
 
 		accent5: (
-			bg:				#505393,
+			bg:				#000000,
 			fg-bold:		#ffffff,
 			fg:				mix(#505393, #ffffff, 25%),
 			fg-light:		mix(#505393, #ffffff, 40%),
-			border:			rgba(0,0,0,0.125),
+			border:			rgb(255, 255, 255),
 			border-bg:		rgba(255,255,255,0.075),
 			border2:		rgba(0,0,0,0.25),
 			border2-bg:		rgba(255,255,255,0.2)
