--- a/src/assets/sass/main.scss
+++ b/src/assets/sass/main.scss
@@ -1634,7 +1634,7 @@
 			@include vendor('transition-delay', '3.5s');
 			@include vendor('transform', 'translateY(0)');
 			border: none;
-			bottom: 0;
+			bottom: 5vh;
 			color: black;
 			font-size: 0.8em;
 			height: 8.5em;
@@ -1828,6 +1828,10 @@
 		@include padding(6em, 0);
 		background-color: darken(_palette(bg), 8);
 		text-align: center;
+		display: block;
+		position: absolute;
+		width: 100%;
+		bottom: 0;
 
 		.icons {
 			font-size: 1.25em;
@@ -2024,7 +2028,7 @@
 			margin-right: 1em;
 		}
 		img {
-			width: 5em;
+			width: 4em;
 		}
 		li {
 			display: flex;
@@ -2037,4 +2041,32 @@
 			}
 		}
 	}
+
+	.footer-image {
+		background-image: linear-gradient(to top, rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url("../images/footer.jpg");
+		background-position: center;
+		background-repeat: no-repeat;
+		background-size: cover;
+		position: relative;
+		height: 50em;
+		display: flex;
+		align-items: center;
+	}
 	
+	#footer-section {
+		position: relative;
+	}
+
+	.te-invitamos-a {
+		position: absolute;
+		width: 16em;
+		font-size: 1.5em;
+		letter-spacing: 1.5px;
+		line-height: 1.3;
+		color: black;
+		top: 15%;
+		left: 10%;
+		b {
+			color: black;
+		}
+	}
