--- a/src/assets/sass/main.scss
+++ b/src/assets/sass/main.scss
@@ -1634,7 +1634,7 @@
 			@include vendor('transition-delay', '3.5s');
 			@include vendor('transform', 'translateY(0)');
 			border: none;
-			bottom: 7vh;
+			bottom: 3vh;
 			color: black;
 			font-size: 0.8em;
 			height: 8.5em;
@@ -1649,6 +1649,10 @@
 			text-transform: uppercase;
 			width: 16em;
 			z-index: 1;
+
+			@include breakpoint('<=small') {
+				bottom: 7vh;
+			}
 
 			&:after {
 				background-image: url('../images/arrow.png');
@@ -1953,10 +1957,13 @@
 
 	.gifImage {
 		width: 100%;
+		max-width: 800px;
 	}
 
-	.blackBackground {
+	.imoMov {
 		background-color: black;
+		text-align: center;
+		padding: 1em;
 	}
 
 	.benefits {
