--- a/src/assets/sass/main.scss
+++ b/src/assets/sass/main.scss
@@ -1374,6 +1374,7 @@
 	#page-wrapper {
 		@include vendor('transition', 'opacity #{_duration(menu)} ease');
 		opacity: 1;
+		overflow: hidden;
 	
 		&:before {
 			background: rgba(0,0,0,0);
